--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     Hello, World!
+    <iframe src="http://ketuldave.me/test.html"></iframe>
   </body>
   <script>
     try{
