--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       iframe.style.display = "none";
       iframe.src = 'https://kdportfolio.000webhostapp.com/test.html?tvc_universalCookie='+getTvcCookie();
       document.body.appendChild(iframe);
+      console.log('testing');
     </script>
     
   </body>
