--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       iframe.src = 'https://kdportfolio.000webhostapp.com/test.html?tvc_universalCookie='+TVCgetCookie('tvc_universalCookie');
       document.body.appendChild(iframe);
       console.log('testing');
-      console.log(TVCgetCookie('tvc_universalCookie'));
+      console.log(TVCgetCookie('tvc_universalCookie')+'test');
     </script>
     
   </body>
